@@ -42,7 +42,8 @@ class Comment < ActiveRecord::Base
     User.find(:all, 
       :conditions => ["users.id NOT IN (?) AND users.notify_comments = ? 
                       AND commentable_id = ? AND commentable_type = ? 
-                      AND comments.created_at > ?", [user_id, recipient_id.to_i], true, commentable_id, commentable_type, 2.weeks.ago], 
+                      AND comments.notify_by_email = ? 
+                      AND comments.created_at > ?", [user_id, recipient_id.to_i], true, commentable_id, commentable_type, true, 2.weeks.ago], 
 #      :include => :comments_as_author, :group => "users.id", :limit => 20)    
       :include => :comments_as_author, :limit => 20)
   end    
@@ -93,7 +94,7 @@ class Comment < ActiveRecord::Base
   end
   
   def notify_previous_anonymous_commenters
-    anonymous_commenters_emails = commentable.comments.map{|c|  c.author_email if ( !c.user && !c.author_email.eql?(self.author_email) && c.author_email) }.uniq.compact
+    anonymous_commenters_emails = commentable.comments.map{|c|  c.author_email if (c.notify_by_email? && !c.user && !c.author_email.eql?(self.author_email) && c.author_email) }.uniq.compact
     anonymous_commenters_emails.each do |email|
       UserNotifier.deliver_follow_up_comment_notice_anonymous(email, self)
     end    
@@ -101,7 +102,7 @@ class Comment < ActiveRecord::Base
   
   def send_notifications
     UserNotifier.deliver_comment_notice(self) if should_notify_recipient?
-    self.notify_previous_commenters  
+    self.notify_previous_commenters
     self.notify_previous_anonymous_commenters if AppConfig.allow_anonymous_commenting
   end
   
