@@ -751,6 +751,8 @@ en:
   no_tags: No tags
   #en: notify_email_updates: Notify of community news
   notify_email_updates: Notify of community news
+  #en: notify_me_of_follow_ups_via_email: Notify me of follow ups via e-mail  
+  notify_me_of_follow_ups_via_email: Notify me of follow ups via e-mail  
   #en: notify_of_comments: Notify of comments
   notify_of_comments: Notify of comments
   #en: notify_of_friend_requests: Notify of friend requests
