@@ -93,5 +93,49 @@ namespace :community_engine do
       end
     end
   end
+  
+  namespace :db do
+    namespace :migrate do 
+      desc 'For CE coming from version < 1.0.1 that stored plugin migration info in the normal Rails schema_migrations table. Move that info back into the plugin_schema_migrations table.'
+      task :upgrade_desert_plugin_migrations => :environment do
+        plugin_migration_table = Desert::PluginMigrations::Migrator.schema_migrations_table_name
+        schema_migration_table = ActiveRecord::Migrator.schema_migrations_table_name
+          
+        unless ActiveRecord::Base.connection.table_exists?(plugin_migration_table)
+          abort "Cannot find plugin migration table #{plugin_migration_table}."
+        end
+
+        def insert_new_version(plugin_name, version, table)
+          # Check if the row already exists for some reason - maybe run this task more than once.
+          return if ActiveRecord::Base.connection.select_rows("SELECT * FROM #{table} WHERE version = #{version} AND plugin_name = '#{plugin_name}'").size > 0
+
+          puts "Inserting new version #{version} for plugin #{plugin_name} in #{table}."
+          ActiveRecord::Base.connection.insert("INSERT INTO #{table} (plugin_name, version) VALUES ('#{plugin_name}', #{version.to_i})")
+        end
+        
+        def remove_old_version(plugin_name, version, table)
+          puts "Removing old version #{version} for plugin #{plugin_name} in #{table}."          
+          ActiveRecord::Base.connection.execute("DELETE FROM #{table} WHERE version = '#{version}-#{plugin_name}'")
+        end
+
+        existing_migrations = ActiveRecord::Base.connection.select_rows("SELECT * FROM #{schema_migration_table}").uniq
+        migrations = {}
+        existing_migrations.flatten.each do |m|
+          plugin_version, plugin_name = m.split('-')
+          next if plugin_name.blank?
+          migrations[plugin_name] ||= []
+          migrations[plugin_name] << plugin_version
+        end
+        
+        migrations.each do |plugin_name, versions|
+          versions.each do |version|
+            insert_new_version(plugin_name, version, plugin_migration_table)
+            remove_old_version(plugin_name, version, schema_migration_table)
+          end
+        end
+
+      end
+    end
+  end
 
 end
